--- a/client/lib/frontend/general/views/viewmore.ejs
+++ b/client/lib/frontend/general/views/viewmore.ejs
@@ -6,7 +6,7 @@
   <title>Home | Top Navigation</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="/gen/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/gen/bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/gen/bower_components/font-awesome/css/font-awesome.min.css"> 
   <link rel="stylesheet" href="/gen/bower_components/Ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="/gen/dist/css/AdminLTE.min.css">
   <link rel="stylesheet" href="/gen/dist/css/skins/_all-skins.min.css">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand"><b>Cars2</b>GO</a>
+          <a href="/index" class="navbar-brand"><b>Cars2</b>GO</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
@@ -29,43 +29,22 @@
   <div class="content-wrapper">
     <div class="container">
      <section class="content-header">
-        <div class="col-md-9">
-          <div class="box box-info">
-            <div class="box-header with-border">
-              <h3 class="box-title">Contact Details</h3>
-            </div>
-            <form class="form-horizontal">
-              <div class="box-body">                
-                <div class="form-group">
-                  <label for="inputfirstname3" class="col-sm-2 control-label">First Name</label>
-                  <div class="col-sm-4">
-                    <input type="firstname" class="form-control" id="inputfirstname3" placeholder="First Name">
-                  </div>
-                  <label for="inputlastname3" class="col-sm-2 control-label">Last Name</label>
-                  <div class="col-sm-4">
-                    <input type="lastname" class="form-control" id="inputlastname3" placeholder="Last Name">
-                  </div>
-                </div> 
-                 <div class="form-group">
-                  <label for="inputemail3" class="col-sm-2 control-label">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputemail3" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputnumber3" class="col-sm-2 control-label">Mobile Number</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputnumber3" placeholder="Mobile Number">
-                  </div>
-                </div>
-                  <div class="col-md-9">
-              <div class="box-footer">
-                <button type="submit" class="btn btn-info">Book now</button>
-              </div>
-                  </div>
-              </div>
-            </form>
-          </div>     
+        <div class="col-md-5 col-sm-6 col-xs-12">
+          <div class="info-box">
+           <img src="/gen/images/car1.jpg" alt="car" height="150" width="250">
+            <div class="info-box-content">
+              <span class="info-box-number">Brand: </span>
+              <span class="info-box-text">Capacity: </span>
+              <span class="info-box-text">Airbags: </span>
+              <span class="info-box-text">Automatic/AC</span>
+              <span class="info-box-text">Price: </span>
+              <span class="info-box-text">Model and Year: </span>
+              <span class="info-box-text">Displacement</span>
+              <span class="info-box-text">AT/MT</span>
+              <span class="info-box-text"><a href=/cars><button class="btn btn-primary">Reserve</button></a></span>
+            </div> 
+          </div> 
+        </div>   
       </section>
     </div>
   </div>
